# tt-zephyr-platforms

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  manifest.json  tt-console  west.yml
.github/: DOCKERFILE  Dockerfile
.github/workflows/: build-containers.yml  build-fw.yml  docs.yml  hardware-long.yml  hardware-smoke.yml  hardware.yml  release.yml
app/dmc/: prj.conf
app/dmc/src/: main.c
app/grendel_bl1_primary/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml  sysbuild.cmake
app/grendel_bl1_primary/boards/: tt_grendel_smc.overlay
app/grendel_bl1_primary/src/: main.c  remote_smc_startup.S
app/grendel_bl1_secondary/: CMakeLists.txt  Kconfig  README.rst  sample.yaml
app/smc/: prj.conf  sysbuild.cmake  tracing.conf
app/smc/boards/: tt_blackhole_tt_blackhole_smc.overlay
app/smc/sysbuild/: mcuboot.conf  recovery_bl2.conf
boards/tenstorrent/tt_blackhole/: board.cmake  init.c  tt_blackhole_tt_blackhole_smc.dts  tt_blackhole_tt_blackhole_smc_defconfig
boards/tenstorrent/tt_blackhole/bootfs/: p100a-bootfs.yaml
boards/tenstorrent/tt_blackhole/src/: flash.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.mspi  flash_mspi_nor.c  flash_mspi_nor.h  flash_mspi_qspi.h
drivers/flash/flash_mspi_nor/: flash_mspi_nor.c  flash_mspi_nor.h
drivers/gpio/: CMakeLists.txt  Kconfig.tt_gr  grendel_gpio.c
drivers/misc/tt_smc_remoteproc/: CMakeLists.txt  Kconfig  tt_smc_remoteproc.c
drivers/mspi/: CMakeLists.txt  Kconfig  Kconfig.mspi_spi_dw  mspi_dw.h  mspi_spi_dw.c  mspi_spi_dw.h
dts/arc/tenstorrent/: tt_blackhole_smc.dtsi
include/tenstorrent/: occp.h
include/zephyr/drivers/misc/: tt_smc_remoteproc.h
include/zephyr/drivers/mspi/: mspi_spi_dw.h
lib/tenstorrent/bh_arc/: status_reg.h
lib/tenstorrent/log_tt_virt/: Kconfig
lib/tenstorrent/occp/: Kconfig  occp.c  occp_i3c.c  occp_private.h
scripts/: ci-local-setup.yml  rtt_helper.py  tt_boot_fs.py  tt_bootstrap.py
scripts/ci/: build-grendel.sh
scripts/shared/: arc_tlb.c
scripts/tt-console/: .gitignore  Makefile  Makefile.am  arc_jtag.c  arc_jtag.h  arc_tlb.c  arc_tlb.h  autogen.sh  console.c  jlink.c  jlink.h
scripts/tt-tracing/: Makefile  tracing.c
soc/tenstorrent/tt_blackhole/: CMakeLists.txt  Kconfig.defconfig.tt_blackhole_smc  rom_start.ld  tt_blackhole_smc.ld
soc/tenstorrent/tt_grendel/tt_grendel_smc/: soc.c
submanifests/: ci.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/tracing/: CMakeLists.txt  Kconfig  tracing_backend_ringbuf.c  tracing_backend_tt.c
test-conf/tests/drivers/gpio/gpio_api_1pin/: testcase.yaml
zephyr/: patches.yml
zephyr/patches/mcuboot/: boot-zephyr-add-support-for-booting-ARC-processors.patch
zephyr/patches/zephyr/: mcuboot-ram-load-support.patch
(+3 files in other folders)
